// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mustaches discovery 1`] = `
Array [
  Array [
    "https://docs.googleapis.com/v1/documents/source-id-123",
    Object {
      "body": null,
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "GET",
    },
  ],
]
`;

exports[`mustaches discovery 2`] = `
Array [
  Object {
    "input": Object {
      "raw": "name",
      "value": "Thibaud",
    },
    "output": "Thibaud",
    "pipes": Array [
      Object {
        "error": [Error: smurf is not defined.],
        "output": "Thibaud",
        "raw": "smurf",
      },
    ],
    "position": Object {
      "end": 24,
      "start": 6,
    },
    "raw": "{{ name | smurf }}",
    "type": "content",
  },
  Object {
    "input": Object {
      "raw": "movies[0].title",
      "value": "Lost in Translation",
    },
    "output": "lost in translation",
    "pipes": Array [
      Object {
        "output": "lost in translation",
        "raw": "lowercase",
      },
    ],
    "position": Object {
      "end": 71,
      "start": 38,
    },
    "raw": "{{ movies[0].title | lowercase }}",
    "type": "content",
  },
]
`;

exports[`mustaches discovery with formatters 1`] = `
Array [
  Array [
    "https://docs.googleapis.com/v1/documents/source-id-123",
    Object {
      "body": null,
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "GET",
    },
  ],
]
`;

exports[`mustaches discovery with formatters 2`] = `
Array [
  Object {
    "input": Object {
      "raw": "name",
      "value": "Thibaud",
    },
    "output": "Smurf",
    "pipes": Array [
      Object {
        "output": "Smurf",
        "raw": "smurf",
      },
    ],
    "position": Object {
      "end": 24,
      "start": 6,
    },
    "raw": "{{ name | smurf }}",
    "type": "content",
  },
  Object {
    "input": Object {
      "raw": "movies[0].title",
      "value": "Lost in Translation",
    },
    "output": "lost in translation",
    "pipes": Array [
      Object {
        "output": "lost in translation",
        "raw": "lowercase",
      },
    ],
    "position": Object {
      "end": 71,
      "start": 38,
    },
    "raw": "{{ movies[0].title | lowercase }}",
    "type": "content",
  },
]
`;

exports[`mustaches discovery with no data 1`] = `
Array [
  Array [
    "https://docs.googleapis.com/v1/documents/source-id-123",
    Object {
      "body": null,
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "GET",
    },
  ],
]
`;

exports[`mustaches discovery with no data 2`] = `
Array [
  Object {
    "input": Object {
      "error": [Error: name is undefined.],
      "raw": "name",
      "value": "",
    },
    "output": "",
    "pipes": Array [
      Object {
        "error": [Error: smurf is not defined.],
        "output": "",
        "raw": "smurf",
      },
    ],
    "position": Object {
      "end": 24,
      "start": 6,
    },
    "raw": "{{ name | smurf }}",
    "type": "content",
  },
  Object {
    "input": Object {
      "error": [Error: movies is undefined.],
      "raw": "movies[0].title",
      "value": "",
    },
    "output": "",
    "pipes": Array [
      Object {
        "output": "",
        "raw": "lowercase",
      },
    ],
    "position": Object {
      "end": 71,
      "start": 38,
    },
    "raw": "{{ movies[0].title | lowercase }}",
    "type": "content",
  },
]
`;

exports[`mustaches export 1`] = `
Array [
  Array [
    "https://www.googleapis.com/drive/v3/files/source-id-123?fields=parents",
    Object {
      "body": null,
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "GET",
    },
  ],
  Array [
    "https://www.googleapis.com/drive/v3/files/source-id-123/export?mimeType=application/pdf",
    Object {
      "body": null,
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "GET",
    },
  ],
  Array [
    "https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart&alt=json",
    Object {
      "body": "{\\"args\\":\\"----BOUNDARY\\\\nContent-Type: application/json; charset=UTF-8\\\\n\\\\n{\\\\\\"name\\\\\\":\\\\\\"Export\\\\\\",\\\\\\"parents\\\\\\":[\\\\\\"parent-id-123\\\\\\"]}\\\\n\\\\n----BOUNDARY\\\\nContent-Type: application/pdf\\\\nContent-Encoding: base64\\\\n\\\\nBLOB123\\\\n\\\\n----BOUNDARY--\\"}",
      "headers": Object {
        "Accept": "application/json",
        "Content-Type": "multipart/related; boundary=--BOUNDARY",
        "authorization": "Bearer my-token",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`mustaches export with destination 1`] = `
Array [
  Array [
    "https://www.googleapis.com/drive/v3/files/source-id-123/export?mimeType=application/pdf",
    Object {
      "body": null,
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "GET",
    },
  ],
  Array [
    "https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart&alt=json",
    Object {
      "body": "{\\"args\\":\\"----BOUNDARY\\\\nContent-Type: application/json; charset=UTF-8\\\\n\\\\n{\\\\\\"name\\\\\\":\\\\\\"Export\\\\\\",\\\\\\"parents\\\\\\":[\\\\\\"destination-id-123\\\\\\"]}\\\\n\\\\n----BOUNDARY\\\\nContent-Type: application/pdf\\\\nContent-Encoding: base64\\\\n\\\\nBLOB123\\\\n\\\\n----BOUNDARY--\\"}",
      "headers": Object {
        "Accept": "application/json",
        "Content-Type": "multipart/related; boundary=--BOUNDARY",
        "authorization": "Bearer my-token",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`mustaches export with name 1`] = `
Array [
  Array [
    "https://www.googleapis.com/drive/v3/files/source-id-123?fields=parents",
    Object {
      "body": null,
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "GET",
    },
  ],
  Array [
    "https://www.googleapis.com/drive/v3/files/source-id-123/export?mimeType=application/pdf",
    Object {
      "body": null,
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "GET",
    },
  ],
  Array [
    "https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart&alt=json",
    Object {
      "body": "{\\"args\\":\\"----BOUNDARY\\\\nContent-Type: application/json; charset=UTF-8\\\\n\\\\n{\\\\\\"name\\\\\\":\\\\\\"My great pdf\\\\\\",\\\\\\"parents\\\\\\":[\\\\\\"parent-id-123\\\\\\"]}\\\\n\\\\n----BOUNDARY\\\\nContent-Type: application/pdf\\\\nContent-Encoding: base64\\\\n\\\\nBLOB123\\\\n\\\\n----BOUNDARY--\\"}",
      "headers": Object {
        "Accept": "application/json",
        "Content-Type": "multipart/related; boundary=--BOUNDARY",
        "authorization": "Bearer my-token",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`mustaches interpolate 1`] = `
Array [
  Array [
    "https://www.googleapis.com/drive/v3/files/source-id-123/copy",
    Object {
      "body": "{\\"parents\\":[\\"destination-id-123\\"]}",
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "POST",
    },
  ],
  Array [
    "https://docs.googleapis.com/v1/documents/new-file-id-123",
    Object {
      "body": null,
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "GET",
    },
  ],
  Array [
    "https://docs.googleapis.com/v1/documents/new-file-id-123:batchUpdate",
    Object {
      "body": "{\\"documentId\\":\\"new-file-id-123\\",\\"requests\\":[{\\"replaceAllText\\":{\\"replaceText\\":\\"Thibaud\\",\\"containsText\\":{\\"text\\":\\"{{ name | smurf }}\\",\\"matchCase\\":true}}},{\\"replaceAllText\\":{\\"replaceText\\":\\"lost in translation\\",\\"containsText\\":{\\"text\\":\\"{{ movies[0].title | lowercase }}\\",\\"matchCase\\":true}}}]}",
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`mustaches interpolate with custom formatters  1`] = `
Array [
  Array [
    "https://www.googleapis.com/drive/v3/files/source-id-123/copy",
    Object {
      "body": "{\\"parents\\":[\\"destination-id-123\\"]}",
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "POST",
    },
  ],
  Array [
    "https://docs.googleapis.com/v1/documents/new-file-id-123",
    Object {
      "body": null,
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "GET",
    },
  ],
  Array [
    "https://docs.googleapis.com/v1/documents/new-file-id-123:batchUpdate",
    Object {
      "body": "{\\"documentId\\":\\"new-file-id-123\\",\\"requests\\":[{\\"replaceAllText\\":{\\"replaceText\\":\\"Smurf\\",\\"containsText\\":{\\"text\\":\\"{{ name | smurf }}\\",\\"matchCase\\":true}}},{\\"replaceAllText\\":{\\"replaceText\\":\\"lost in translation\\",\\"containsText\\":{\\"text\\":\\"{{ movies[0].title | lowercase }}\\",\\"matchCase\\":true}}}]}",
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`mustaches interpolate with name 1`] = `
Array [
  Array [
    "https://www.googleapis.com/drive/v3/files/source-id-123/copy",
    Object {
      "body": "{\\"parents\\":[\\"destination-id-123\\"],\\"name\\":\\"New interpolated file\\"}",
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "POST",
    },
  ],
  Array [
    "https://docs.googleapis.com/v1/documents/new-file-id-123",
    Object {
      "body": null,
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "GET",
    },
  ],
  Array [
    "https://docs.googleapis.com/v1/documents/new-file-id-123:batchUpdate",
    Object {
      "body": "{\\"documentId\\":\\"new-file-id-123\\",\\"requests\\":[{\\"replaceAllText\\":{\\"replaceText\\":\\"Thibaud\\",\\"containsText\\":{\\"text\\":\\"{{ name | smurf }}\\",\\"matchCase\\":true}}},{\\"replaceAllText\\":{\\"replaceText\\":\\"lost in translation\\",\\"containsText\\":{\\"text\\":\\"{{ movies[0].title | lowercase }}\\",\\"matchCase\\":true}}}]}",
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "POST",
    },
  ],
]
`;

exports[`mustaches interpolate with no destination given 1`] = `
Array [
  Array [
    "https://www.googleapis.com/drive/v3/files/source-id-123?fields=parents",
    Object {
      "body": null,
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "GET",
    },
  ],
  Array [
    "https://www.googleapis.com/drive/v3/files/source-id-123/copy",
    Object {
      "body": "{\\"parents\\":[\\"parent-id-123\\"]}",
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "POST",
    },
  ],
  Array [
    "https://docs.googleapis.com/v1/documents/new-file-id-123",
    Object {
      "body": null,
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "GET",
    },
  ],
  Array [
    "https://docs.googleapis.com/v1/documents/new-file-id-123:batchUpdate",
    Object {
      "body": "{\\"documentId\\":\\"new-file-id-123\\",\\"requests\\":[{\\"replaceAllText\\":{\\"replaceText\\":\\"Thibaud\\",\\"containsText\\":{\\"text\\":\\"{{ name | smurf }}\\",\\"matchCase\\":true}}},{\\"replaceAllText\\":{\\"replaceText\\":\\"lost in translation\\",\\"containsText\\":{\\"text\\":\\"{{ movies[0].title | lowercase }}\\",\\"matchCase\\":true}}}]}",
      "headers": Object {
        "Content-Type": "application/json",
        "authorization": "Bearer my-token",
      },
      "method": "POST",
    },
  ],
]
`;
